--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
   "name": "@dargmuesli/nuxt-vio",
-  "type": "module",
   "version": "0.0.1",
+  "type": "module",
+  "publishConfig": {
+    "access": "public"
+  },
+  "engines": {
+    "node": "19"
+  },
+  "packageManager": "pnpm@8.0.0",
+  "files": [
+    "composables",
+    "server",
+    "utils",
+    "nuxt.config.ts"
+  ],
   "main": "./nuxt.config.ts",
   "scripts": {
     "dev": "nuxi prepare & nuxi dev .playground",
