--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "preview": "nuxi preview .playground",
     "lint": "eslint ."
   },
+  "dependencies": {
+    "vue-gtag": "2.0.1"
+  },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "12.0.0",
     "eslint": "8.37.0",
     "nuxt": "3.3.3",
-    "typescript": "5.0.3",
-    "vue-gtag": "2.0.1"
+    "typescript": "5.0.3"
   }
 }
