--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@nuxtjs/i18n": "8.0.0-beta.10",
     "vue-gtag": "2.0.1"
   },
   "devDependencies": {
