--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "vue-gtag": "2.0.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "17.5.1",
+    "@commitlint/config-conventional": "17.4.4",
     "@nuxtjs/eslint-config-typescript": "12.0.0",
     "eslint": "8.38.0",
+    "husky": "8.0.3",
     "nuxt": "3.4.0",
     "typescript": "5.0.4"
   }
