--- a/package.json
+++ b/package.json
@@ -38,11 +38,17 @@
   "devDependencies": {
     "@commitlint/cli": "17.5.1",
     "@commitlint/config-conventional": "17.4.4",
+    "@intlify/eslint-plugin-vue-i18n": "2.0.0",
     "@nuxtjs/eslint-config-typescript": "12.0.0",
     "eslint": "8.38.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-nuxt": "4.0.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-yml": "1.5.0",
     "husky": "8.0.3",
     "lint-staged": "13.2.1",
     "nuxt": "3.4.0",
+    "prettier": "2.8.7",
     "typescript": "5.0.4"
   }
 }
