--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,17 @@ on:
   push:
 
 jobs:
-  semantic-release:
-    name: Semantic Release
+  build:
+    name: Build
+    uses: dargmuesli/github-actions/.github/workflows/docker.yml@0.35.6
+    secrets:
+      DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      DOCKER_HUB_USER_NAME: ${{ secrets.DOCKER_HUB_USER_NAME }}
+    with:
+      ARTIFACT_PATH: .output/public
+  release-semantic:
+    needs: build
+    name: Release (semantic)
     uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@0.35.6
     secrets:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
