--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,12 +7,7 @@ on:
 jobs:
   build:
     name: Build
-    uses: dargmuesli/github-actions/.github/workflows/docker.yml@0.35.6
-    secrets:
-      DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-      DOCKER_HUB_USER_NAME: ${{ secrets.DOCKER_HUB_USER_NAME }}
-    with:
-      ARTIFACT_PATH: .output/public
+    uses: dargmuesli/github-actions/.github/workflows/docker-ghcr.yml@0.35.6
   release-semantic:
     needs: build
     name: Release (semantic)
