--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
   },
   "dependencies": {
     "@dargmuesli/nuxt-cookie-control": "5.4.0",
+    "@nuxtjs/html-validator": "1.2.4",
     "@nuxtjs/i18n": "8.0.0-beta.10",
     "@nuxtjs/tailwindcss": "6.6.5",
     "@tailwindcss/typography": "0.5.9",
+    "nuxt-seo-kit": "1.3.6",
     "vue-gtag": "2.0.1"
   },
   "devDependencies": {
