--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "generate": "nuxi generate .playground",
     "preview": "nuxi preview .playground",
     "prepare": "pnpm husky install && pnpm nuxt prepare .playground",
-    "lint": "eslint --cache --ext .js,.ts,.vue --ignore-path .gitignore .",
-    "lint:staged": "pnpm lint-staged"
+    "lint": "pnpm lint:js && pnpm lint:ts && pnpm lint:style",
+    "lint:js": "eslint --cache --ext .js,.ts,.vue --ignore-path .gitignore .",
+    "lint:staged": "pnpm lint-staged",
+    "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
+    "lint:ts": "pnpm nuxt typecheck"
   },
   "dependencies": {
     "@dargmuesli/nuxt-cookie-control": "5.4.0",
@@ -52,6 +55,11 @@
     "lint-staged": "13.2.1",
     "nuxt": "3.4.0",
     "prettier": "2.8.7",
-    "typescript": "5.0.4"
+    "stylelint": "15.4.0",
+    "stylelint-config-recommended-vue": "1.4.0",
+    "stylelint-config-standard": "32.0.0",
+    "stylelint-no-unsupported-browser-features": "6.1.0",
+    "typescript": "5.0.4",
+    "vue-tsc": "1.2.0"
   }
 }
