--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "pages",
     "plugins",
     "utils",
+    "app.config.ts",
+    "app.vue",
     "error.vue",
     "nuxt.config.ts",
     "tailwind.config.ts"
