--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,13 +7,15 @@ on:
 jobs:
   build:
     name: Build
-    uses: dargmuesli/github-actions/.github/workflows/docker-ghcr.yml@0.36.0
+    uses: dargmuesli/github-actions/.github/workflows/docker-ghcr.yml@0.37.2
     permissions:
       packages: write
   release-semantic:
     needs: build
     name: Release (semantic)
-    uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@0.36.0
+    uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@0.37.2
+    with:
+      NODE_VERSIONS: '[18]'
     secrets:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
