--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,19 +3,51 @@ name: CI
 on:
   pull_request:
   push:
+    branches:
+      - alpha
+      - beta
+      - master
+      - renovate/**
 
 jobs:
+  prepare_jobs:
+    name: 'Prepare: job optimization'
+    runs-on: ubuntu-latest
+    outputs:
+      pr_found: ${{ steps.pr.outputs.pr_found }}
+    steps:
+      - name: Get current PR
+        id: pr
+        uses: 8BitJonny/gh-get-current-pr@2.2.0
+        with:
+          filterOutClosed: true
+          sha: ${{ github.event.pull_request.head.sha }}
+  release_semantic_dry:
+    needs: prepare_jobs
+    name: Release (semantic, dry)
+    uses: dargmuesli/github-actions/.github/workflows/release-semantic-next.yml@0.40.4
+    if: needs.prepare_jobs.outputs.pr_found == 'false' || github.event_name == 'pull_request'
+    permissions:
+      contents: write
+    secrets:
+      PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+    with:
+      DRY_RUN: true
+      CACHE_PATH: pnpm-lock.yaml
   build:
     name: Build
-    uses: dargmuesli/github-actions/.github/workflows/docker-ghcr.yml@0.40.5
+    uses: dargmuesli/github-actions/.github/workflows/docker.yml@0.40.4
+    needs: release_semantic_dry
     permissions:
       packages: write
-  release-semantic:
+    with:
+      # PUSH: false
+      TAG: ${{ needs.release_semantic_dry.outputs.new_release_version }}
+  release_semantic:
     needs: build
     name: Release (semantic)
-    uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@0.40.5
-    with:
-      NODE_VERSIONS: '[18]'
+    uses: dargmuesli/github-actions/.github/workflows/release-semantic-next.yml@0.40.4
+    permissions:
+      contents: write
     secrets:
-      GH_TOKEN: ${{ secrets.GH_TOKEN }}
-      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
