--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,10 +30,10 @@ jobs:
     permissions:
       contents: write
     secrets:
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
     with:
       DRY_RUN: true
-      CACHE_PATH: pnpm-lock.yaml
   build:
     name: Build
     uses: dargmuesli/github-actions/.github/workflows/docker.yml@0.40.4
