--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   "devDependencies": {
     "@commitlint/cli": "17.6.5",
     "@commitlint/config-conventional": "17.6.5",
-    "@intlify/eslint-plugin-vue-i18n": "2.0.0",
+    "@intlify/eslint-plugin-vue-i18n": "3.0.0-beta.1",
     "@nuxtjs/eslint-config-typescript": "12.0.0",
     "eslint": "8.43.0",
     "eslint-config-prettier": "8.8.0",
