--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@dargmuesli/nuxt-cookie-control": "5.10.2",
     "@http-util/status-i18n": "0.7.0",
     "@nuxtjs/html-validator": "1.4.0",
-    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-beta.12-28122654.89ddb67",
+    "@nuxtjs/i18n": "8.0.0-beta.10",
     "@nuxtjs/tailwindcss": "6.8.0",
     "@tailwindcss/typography": "0.5.9",
     "nuxt-seo-kit": "1.3.8",
