--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "preview": "nuxi preview .playground",
     "prepare": "pnpm husky install && pnpm nuxt prepare .playground",
     "lint": "pnpm lint:js && pnpm lint:ts && pnpm lint:style",
+    "lint:fix": "pnpm lint:js --fix && pnpm lint:ts --fix && pnpm lint:style --fix",
     "lint:js": "eslint --cache --ext .js,.ts,.vue --ignore-path .gitignore .",
     "lint:staged": "pnpm lint-staged",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
