--- a/package.json
+++ b/package.json
@@ -68,5 +68,10 @@
     "stylelint-no-unsupported-browser-features": "7.0.0",
     "typescript": "5.1.6",
     "vue-tsc": "1.8.6"
+  },
+  "pnpm": {
+    "overrides": {
+      "nuxt-og-image": "2.0.10"
+    }
   }
 }
