--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@nuxtjs/i18n": "8.0.0-beta.10",
     "@nuxtjs/tailwindcss": "6.8.0",
     "@tailwindcss/typography": "0.5.9",
-    "nuxt-seo-kit": "1.3.9",
+    "nuxt-seo-kit-module": "2.0.0-beta.5",
     "sweetalert2": "11.7.20",
     "vue-gtag": "2.0.1"
   },
