--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,6 @@
 {
-  "extends": "./.playground/.nuxt/tsconfig.json"
+  "extends": "./.playground/.nuxt/tsconfig.json",
+  "vueCompilerOptions": { // https://github.com/unjs/pkg-types/pull/130
+    "htmlAttributes": [] // https://github.com/johnsoncodehk/volar/issues/1970#issuecomment-1276994634
+  }
 }
