--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@dargmuesli/nuxt-cookie-control": "6.1.5",
+    "@dargmuesli/nuxt-vio": "link:.",
     "@http-util/status-i18n": "0.7.0",
     "@nuxtjs/html-validator": "1.5.2",
     "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-beta.13-28175294.3a94c60",
