--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@dargmuesli/nuxt-vio": "link:.",
     "@http-util/status-i18n": "0.7.0",
     "@nuxtjs/html-validator": "1.5.2",
-    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-beta.13-28178863.26f7829",
+    "@nuxtjs/i18n": "8.0.0-rc.1",
     "@nuxtjs/tailwindcss": "6.8.0",
     "@tailwindcss/typography": "0.5.9",
     "nuxt-seo-kit-module": "2.0.0-beta.5",
