--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
   },
   "pnpm": {
     "overrides": {
-      "nuxt-og-image": "2.0.11"
+      "eslint-plugin-vue": "9.15.1",
+      "nuxt-og-image": "2.0.12"
     }
   }
 }
