--- a/package.json
+++ b/package.json
@@ -74,8 +74,7 @@
   },
   "pnpm": {
     "overrides": {
-      "eslint-plugin-vue": "9.15.1",
-      "nuxt-og-image": "2.0.12"
+      "eslint-plugin-vue": "9.15.1"
     }
   }
 }
