--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@nuxtjs/eslint-config-typescript": "12.0.0",
     "eslint": "8.46.0",
     "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-compat": "4.1.4",
     "eslint-plugin-nuxt": "4.0.0",
     "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-yml": "1.8.0",
