--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@nuxtjs/i18n": "8.0.0-rc.2",
     "@nuxtjs/tailwindcss": "6.8.0",
     "@tailwindcss/typography": "0.5.9",
+    "dayjs": "1.11.9",
+    "marked": "7.0.0",
     "nuxt-seo-kit-module": "2.0.0-beta.9",
     "sweetalert2": "11.7.20",
     "vue-gtag": "2.0.1"
@@ -56,6 +58,7 @@
     "@commitlint/config-conventional": "17.6.7",
     "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.3",
     "@nuxtjs/eslint-config-typescript": "12.0.0",
+    "@types/marked": "5.0.1",
     "eslint": "8.46.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-compat": "4.1.4",
