--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@nuxtjs/html-validator": "1.5.2",
     "@nuxtjs/i18n": "8.0.0-rc.2",
     "@nuxtjs/tailwindcss": "6.8.0",
+    "@tailwindcss/forms": "0.5.4",
+    "@tailwindcss/line-clamp": "0.4.4",
     "@tailwindcss/typography": "0.5.9",
     "dayjs": "1.11.9",
     "marked": "7.0.0",
@@ -73,6 +75,7 @@
     "stylelint-config-recommended-vue": "1.5.0",
     "stylelint-config-standard": "34.0.0",
     "stylelint-no-unsupported-browser-features": "7.0.0",
+    "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "vue-tsc": "1.8.8"
   }
