--- a/package.json
+++ b/package.json
@@ -43,15 +43,18 @@
     "@dargmuesli/nuxt-cookie-control": "6.1.5",
     "@dargmuesli/nuxt-vio": "link:",
     "@http-util/status-i18n": "0.7.0",
+    "@nuxtjs/color-mode": "3.3.0",
     "@nuxtjs/html-validator": "1.5.2",
     "@nuxtjs/i18n": "8.0.0-rc.2",
     "@nuxtjs/tailwindcss": "6.8.0",
+    "@pinia/nuxt": "0.4.11",
     "@tailwindcss/forms": "0.5.4",
     "@tailwindcss/line-clamp": "0.4.4",
     "@tailwindcss/typography": "0.5.9",
     "dayjs": "1.11.9",
     "marked": "7.0.0",
     "nuxt-seo-kit-module": "2.0.0-beta.9",
+    "pinia": "2.1.6",
     "sweetalert2": "11.7.20",
     "vue-gtag": "2.0.1"
   },
