--- a/package.json
+++ b/package.json
@@ -51,7 +51,15 @@
     "@tailwindcss/forms": "0.5.4",
     "@tailwindcss/line-clamp": "0.4.4",
     "@tailwindcss/typography": "0.5.9",
+    "@urql/core": "4.1.1",
+    "@urql/devtools": "2.0.3",
+    "@urql/exchange-graphcache": "6.3.1",
+    "@urql/vue": "1.1.2",
+    "@vuelidate/core": "2.0.3",
+    "clipboard": "2.0.11",
     "dayjs": "1.11.9",
+    "is-https": "4.0.0",
+    "jose": "4.14.4",
     "marked": "7.0.0",
     "nuxt-seo-kit-module": "2.0.0-beta.9",
     "pinia": "2.1.6",
