--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "stylelint-no-unsupported-browser-features": "7.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
+    "vue": "3.3.4",
     "vue-tsc": "1.8.8"
   }
 }
