refactor: move source to separate directory

--- a/.releaserc
+++ b/.releaserc
@@ -3,9 +3,13 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
-    "@semantic-release/npm",
+    ["@semantic-release/npm", {
+      "pkgRoot": "./src"
+    }],
     "@semantic-release/github",
-    "@semantic-release/git"
+    ["@semantic-release/git", {
+      "assets": ["CHANGELOG.md", "./src/package.json"]
+    }]
   ],
   "tagFormat": "${version}"
 }
