--- a/src/package.json
+++ b/src/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@dargmuesli/nuxt-cookie-control": "6.1.5",
     "@http-util/status-i18n": "0.7.0",
+    "@nuxt/image": "1.0.0-rc.1",
     "@nuxtjs/color-mode": "3.3.0",
     "@nuxtjs/html-validator": "1.5.2",
     "@nuxtjs/i18n": "8.0.0-rc.2",
