--- a/src/package.json
+++ b/src/package.json
@@ -29,17 +29,17 @@
   ],
   "main": "nuxt.config.ts",
   "scripts": {
-    "dev": "nuxi dev .playground",
-    "build": "nuxi build .playground",
-    "generate": "nuxi generate .playground",
-    "preview": "nuxi preview .playground",
-    "prepare": "nuxi prepare .playground",
-    "lint": "pnpm lint:js && pnpm lint:ts && pnpm lint:style",
+    "build": "nuxt build .playground",
+    "dev": "nuxt dev .playground",
+    "generate": "nuxt generate .playground",
     "lint:fix": "pnpm lint:js --fix && pnpm lint:ts --fix && pnpm lint:style --fix",
     "lint:js": "eslint --cache --ext .js,.ts,.vue --ignore-path .gitignore .",
     "lint:staged": "lint-staged",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
-    "lint:ts": "nuxi typecheck"
+    "lint:ts": "nuxt typecheck",
+    "lint": "pnpm lint:js && pnpm lint:ts && pnpm lint:style",
+    "prepare": "nuxt prepare .playground",
+    "preview": "nuxt preview .playground"
   },
   "dependencies": {
     "@dargmuesli/nuxt-cookie-control": "6.1.5",
