--- a/src/package.json
+++ b/src/package.json
@@ -57,8 +57,9 @@
     "@urql/exchange-graphcache": "6.3.1",
     "@urql/vue": "1.1.2",
     "@vuelidate/core": "2.0.3",
+    "@vuelidate/validators": "2.0.3",
     "clipboard": "2.0.11",
-    "dayjs": "1.11.9",
+    "dayjs": "2.0.0-alpha.4",
     "is-https": "4.0.0",
     "jose": "4.14.4",
     "marked": "7.0.1",
@@ -85,7 +86,6 @@
     "stylelint-config-standard": "34.0.0",
     "stylelint-no-unsupported-browser-features": "7.0.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
     "vue": "3.3.4",
     "vue-tsc": "1.8.8"
   }
