--- a/src/package.json
+++ b/src/package.json
@@ -81,6 +81,7 @@
     "lint-staged": "13.2.3",
     "nuxt": "3.6.5",
     "prettier": "3.0.1",
+    "prettier-plugin-tailwindcss": "0.5.3",
     "stylelint": "15.10.2",
     "stylelint-config-recommended-vue": "1.5.0",
     "stylelint-config-standard": "34.0.0",
