--- a/src/package.json
+++ b/src/package.json
@@ -66,7 +66,8 @@
     "nuxt-seo-kit-module": "2.0.0-beta.9",
     "pinia": "2.1.6",
     "sweetalert2": "11.7.20",
-    "vue-gtag": "2.0.1"
+    "vue-gtag": "2.0.1",
+    "vue-tsc": "1.8.8"
   },
   "devDependencies": {
     "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.3",
@@ -87,7 +88,6 @@
     "stylelint-config-standard": "34.0.0",
     "stylelint-no-unsupported-browser-features": "7.0.0",
     "tailwindcss": "3.3.3",
-    "vue": "3.3.4",
-    "vue-tsc": "1.8.8"
+    "vue": "3.3.4"
   }
 }
