chore(stylelint): use specific ignores

--- a/src/.stylelintrc
+++ b/src/.stylelintrc
@@ -5,20 +5,6 @@
   ],
   "plugins": ["stylelint-no-unsupported-browser-features"],
   "rules": {
-    "at-rule-no-unknown": [
-      true,
-      {
-        "ignoreAtRules": [
-          "apply",
-          "layer",
-          "responsive",
-          "screen",
-          "tailwind",
-          "variants"
-        ]
-      }
-    ],
-    "no-descending-specificity": null,
-    "plugin/no-unsupported-browser-features": [true, { "severity": "warning" }]
+    "plugin/no-unsupported-browser-features": true
   }
 }
