chore(package): fix stylelint glob

--- a/src/package.json
+++ b/src/package.json
@@ -35,7 +35,7 @@
     "lint:fix": "pnpm lint:js --fix && pnpm lint:ts --fix && pnpm lint:style --fix",
     "lint:js": "eslint --cache --ext .js,.ts,.vue --ignore-path .gitignore .",
     "lint:staged": "lint-staged",
-    "lint:style": "stylelint --cache {,**/}*.{vue,css} --ignore-path .gitignore",
+    "lint:style": "stylelint --cache \"**/*.{vue,css}\" --ignore-path .gitignore",
     "lint:ts": "nuxt typecheck",
     "lint": "pnpm lint:js && pnpm lint:ts && pnpm lint:style",
     "prepare": "nuxt prepare .playground",
