--- a/src/package.json
+++ b/src/package.json
@@ -72,7 +72,10 @@
   "devDependencies": {
     "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.3",
     "@nuxtjs/eslint-config-typescript": "12.0.0",
+    "@types/cookie": "0.5.1",
+    "@types/lodash-es": "4.17.8",
     "@types/marked": "5.0.1",
+    "cookie": "0.5.0",
     "eslint": "8.47.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-compat": "4.1.4",
@@ -80,6 +83,7 @@
     "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-yml": "1.8.0",
     "lint-staged": "14.0.1",
+    "lodash-es": "4.17.21",
     "nuxt": "3.6.5",
     "prettier": "3.0.2",
     "prettier-plugin-tailwindcss": "0.5.3",
