refactor(deps): use @nuxtseo/module

--- a/src/package.json
+++ b/src/package.json
@@ -49,6 +49,7 @@
     "@nuxtjs/html-validator": "1.5.2",
     "@nuxtjs/i18n": "8.0.0-rc.3",
     "@nuxtjs/tailwindcss": "6.8.0",
+    "@nuxtseo/module": "2.0.0-beta.19",
     "@pinia/nuxt": "0.4.11",
     "@tailwindcss/forms": "0.5.5",
     "@tailwindcss/typography": "0.5.9",
@@ -67,7 +68,6 @@
     "jose": "4.14.4",
     "lodash-es": "4.17.21",
     "marked": "7.0.4",
-    "nuxt-seo-kit-module": "2.0.0-beta.13",
     "pinia": "2.1.6",
     "sweetalert2": "11.7.27",
     "vue-gtag": "2.0.1",
