--- a/src/package.json
+++ b/src/package.json
@@ -39,9 +39,21 @@
     "lint:ts": "nuxt typecheck",
     "lint": "pnpm lint:js && pnpm lint:ts && pnpm lint:style",
     "prepare": "nuxt prepare .playground",
-    "preview": "nuxt preview .playground"
+    "preview": "nuxt preview .playground",
+    "start": "PORT=3001 node .playground/.output/server/index.mjs",
+    "test:e2e": "playwright test",
+    "test:e2e:dev": "cross-env NUXT_PUBLIC_IS_TESTING=1 WAIT_ON_TIMEOUT=100000 pnpm test:e2e",
+    "test:e2e:prod": "cross-env NUXT_PUBLIC_IS_TESTING=1 WAIT_ON_TIMEOUT=10000 NODE_ENV=production pnpm test:e2e",
+    "test:e2e:docker:build": "docker build -t test-e2e_base --build-arg UID=$(id -u) --build-arg GID=$(id -g) --target test-e2e_base ..",
+    "test:e2e:docker:run": "docker run --rm -v \"$PWD/..:/srv/app\" -v \"$(pnpm store path):/srv/.pnpm-store\" test-e2e_base",
+    "test:e2e:docker:br": "pnpm test:e2e:docker:build && pnpm test:e2e:docker:run",
+    "test:e2e:docker:dev": "pnpm test:e2e:docker:br pnpm --dir src run test:e2e:dev",
+    "test:e2e:docker:dev:update": "pnpm test:e2e:docker:dev --update-snapshots",
+    "test:e2e:docker:prod": "pnpm test:e2e:docker:br pnpm --dir src run test:e2e:prod",
+    "test:e2e:docker:prod:update": "pnpm test:e2e:docker:prod --update-snapshots"
   },
   "dependencies": {
+    "@axe-core/playwright": "4.7.3",
     "@dargmuesli/nuxt-cookie-control": "6.4.1",
     "@http-util/status-i18n": "0.8.1",
     "@nuxt/image": "1.0.0-rc.1",
@@ -51,6 +63,7 @@
     "@nuxtjs/tailwindcss": "6.8.0",
     "@nuxtseo/module": "2.0.0-beta.19",
     "@pinia/nuxt": "0.4.11",
+    "@playwright/test": "1.37.1",
     "@tailwindcss/forms": "0.5.6",
     "@tailwindcss/typography": "0.5.9",
     "@types/cookie": "0.5.1",
@@ -77,6 +90,7 @@
     "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.3",
     "@nuxtjs/eslint-config-typescript": "12.0.0",
     "@types/marked": "5.0.1",
+    "cross-env": "7.0.3",
     "eslint": "8.48.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-compat": "4.1.4",
@@ -93,5 +107,8 @@
     "stylelint-no-unsupported-browser-features": "7.0.0",
     "tailwindcss": "3.3.3",
     "vue": "3.3.4"
+  },
+  "peerDependencies": {
+    "playwright-core": "1.37.1"
   }
 }
