--- a/src/package.json
+++ b/src/package.json
@@ -78,6 +78,7 @@
     "cookie": "0.5.0",
     "dayjs": "2.0.0-alpha.4",
     "is-https": "4.0.0",
+    "jiti": "1.19.3",
     "jose": "4.14.6",
     "lodash-es": "4.17.21",
     "pinia": "2.1.6",
