--- a/src/package.json
+++ b/src/package.json
@@ -41,7 +41,7 @@
     "prepare": "nuxt prepare .playground",
     "preview": "nuxt preview .playground",
     "start": "PORT=3001 node .playground/.output/server/index.mjs",
-    "test:e2e:dev": "cross-env NUXT_PUBLIC_VIO_IS_TESTING=1 pnpm test:e2e",
+    "test:e2e:dev": "pnpm test:e2e",
     "test:e2e:docker:br": "pnpm test:e2e:docker:build && pnpm test:e2e:docker:run",
     "test:e2e:docker:build": "docker build -t test-e2e_base --build-arg UID=$(id -u) --build-arg GID=$(id -g) --target test-e2e_base ..",
     "test:e2e:docker:dev:update": "pnpm test:e2e:docker:dev --update-snapshots",
@@ -49,7 +49,7 @@
     "test:e2e:docker:prod:update": "pnpm test:e2e:docker:prod --update-snapshots",
     "test:e2e:docker:prod": "pnpm test:e2e:docker:br pnpm --dir src run test:e2e:prod",
     "test:e2e:docker:run": "docker run --rm -v \"$PWD/..:/srv/app\" -v \"$(pnpm store path):/srv/.pnpm-store\" test-e2e_base",
-    "test:e2e:prod": "cross-env NUXT_PUBLIC_VIO_IS_TESTING=1 NODE_ENV=production pnpm test:e2e",
+    "test:e2e:prod": "cross-env NODE_ENV=production pnpm test:e2e",
     "test:e2e": "playwright test"
   },
   "dependencies": {
