ci(docker): test static build

--- a/src/package.json
+++ b/src/package.json
@@ -41,16 +41,20 @@
     "lint": "pnpm lint:js && pnpm lint:ts && pnpm lint:style",
     "prepare": "nuxt prepare .playground",
     "preview": "nuxt preview .playground",
-    "start": "PORT=3001 node .playground/.output/server/index.mjs",
-    "test:e2e:dev": "pnpm test:e2e",
+    "start:node": "PORT=3001 node .playground/.output/server/index.mjs",
+    "start:static": "serve .playground/.output/public -p 3001",
     "test:e2e:docker:br": "pnpm test:e2e:docker:build && pnpm test:e2e:docker:run",
     "test:e2e:docker:build": "docker build -t test-e2e_base --build-arg UID=$(id -u) --build-arg GID=$(id -g) --target test-e2e_base ..",
-    "test:e2e:docker:dev:update": "pnpm test:e2e:docker:dev --update-snapshots",
-    "test:e2e:docker:dev": "pnpm test:e2e:docker:br pnpm --dir src run test:e2e:dev",
-    "test:e2e:docker:prod:update": "pnpm test:e2e:docker:prod --update-snapshots",
-    "test:e2e:docker:prod": "pnpm test:e2e:docker:br pnpm --dir src run test:e2e:prod",
     "test:e2e:docker:run": "docker run --rm -v \"$PWD/..:/srv/app\" -v \"$(pnpm store path):/srv/.pnpm-store\" test-e2e_base",
-    "test:e2e:prod": "cross-env NODE_ENV=production pnpm test:e2e",
+    "test:e2e:docker:server:dev:update": "pnpm test:e2e:docker:server:dev --update-snapshots",
+    "test:e2e:docker:server:dev": "pnpm test:e2e:docker:br pnpm --dir src run test:e2e:server:dev",
+    "test:e2e:docker:server:node:update": "pnpm test:e2e:docker:server:node --update-snapshots",
+    "test:e2e:docker:server:node": "pnpm test:e2e:docker:br pnpm --dir src run test:e2e:server:node",
+    "test:e2e:docker:server:static:update": "pnpm test:e2e:docker:server:static --update-snapshots",
+    "test:e2e:docker:server:static": "pnpm test:e2e:docker:br pnpm --dir src run test:e2e:server:static",
+    "test:e2e:server:dev": "cross-env VIO_SERVER_START_SCRIPT=dev pnpm test:e2e",
+    "test:e2e:server:node": "cross-env NODE_ENV=production VIO_SERVER_START_SCRIPT=start:node pnpm test:e2e",
+    "test:e2e:server:static": "cross-env NODE_ENV=production VIO_SERVER_START_SCRIPT=start:static pnpm test:e2e",
     "test:e2e": "playwright test"
   },
   "dependencies": {
@@ -84,6 +88,7 @@
     "jose": "4.14.6",
     "lodash-es": "4.17.21",
     "pinia": "2.1.6",
+    "serve": "14.2.1",
     "sweetalert2": "11.7.27",
     "vue-gtag": "2.0.1",
     "vue-tsc": "1.8.10"
