--- a/src/package.json
+++ b/src/package.json
@@ -30,9 +30,9 @@
   ],
   "main": "nuxt.config.ts",
   "scripts": {
-    "build": "nuxt build .playground",
+    "build:node": "nuxt build .playground",
+    "build:static": "nuxt generate .playground",
     "dev": "nuxt dev .playground",
-    "generate": "nuxt generate .playground",
     "lint:fix": "pnpm lint:js --fix && pnpm lint:ts --fix && pnpm lint:style --fix",
     "lint:js": "eslint --cache --ext .js,.ts,.vue --ignore-path .gitignore .",
     "lint:staged": "lint-staged",
