--- a/src/package.json
+++ b/src/package.json
@@ -31,8 +31,8 @@
   "main": "nuxt.config.ts",
   "scripts": {
     "build": "pnpm run build:node",
-    "build:node": "nuxt build",
-    "build:static": "SITE_URL=http://localhost:3002 nuxt generate",
+    "build:node": "nuxt build .playground",
+    "build:static": "SITE_URL=http://localhost:3002 nuxt generate .playground",
     "dev": "pnpm run start:dev",
     "generate": "pnpm run build:static",
     "lint:fix": "pnpm run lint:js --fix && pnpm run lint:ts --fix && pnpm run lint:style --fix",
@@ -41,11 +41,11 @@
     "lint:style": "stylelint --cache \"**/*.{vue,css}\" --ignore-path .gitignore",
     "lint:ts": "nuxt typecheck",
     "lint": "pnpm run lint:js && pnpm run lint:ts && pnpm run lint:style",
-    "prepare": "nuxt prepare",
-    "preview": "nuxt preview",
-    "start:dev": "nuxt dev",
-    "start:node": "node .output/server/index.mjs",
-    "start:static": "serve .output/public",
+    "prepare": "nuxt prepare .playground",
+    "preview": "nuxt preview .playground",
+    "start:dev": "nuxt dev .playground",
+    "start:node": "node .playground/.output/server/index.mjs",
+    "start:static": "serve .playground/.output/public",
     "test:e2e:docker:br": "pnpm run test:e2e:docker:build && pnpm run test:e2e:docker:run",
     "test:e2e:docker:build": "docker build -t test-e2e_base --build-arg UID=$(id -u) --build-arg GID=$(id -g) --target test-e2e_base ..",
     "test:e2e:docker:run": "docker run --rm -v \"$PWD/..:/srv/app\" -v \"$(pnpm store path):/srv/.pnpm-store\" test-e2e_base",
