--- a/src/package.json
+++ b/src/package.json
@@ -64,8 +64,10 @@
     "@axe-core/playwright": "4.7.3",
     "@dargmuesli/nuxt-cookie-control": "6.4.2",
     "@http-util/status-i18n": "0.8.1",
+    "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.3",
     "@nuxt/image": "1.0.0-rc.1",
     "@nuxtjs/color-mode": "3.3.0",
+    "@nuxtjs/eslint-config-typescript": "12.1.0",
     "@nuxtjs/html-validator": "1.5.2",
     "@nuxtjs/i18n": "8.0.0-rc.4",
     "@nuxtjs/tailwindcss": "6.8.0",
@@ -86,34 +88,30 @@
     "cookie": "0.5.0",
     "cross-env": "7.0.3",
     "dayjs": "2.0.0-alpha.4",
-    "is-https": "4.0.0",
-    "jiti": "1.20.0",
-    "jose": "4.14.6",
-    "lodash-es": "4.17.21",
-    "pinia": "2.1.6",
-    "serve": "14.2.1",
-    "sweetalert2": "11.7.27",
-    "vue-gtag": "2.0.1",
-    "vue-tsc": "1.8.11"
-  },
-  "devDependencies": {
-    "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.3",
-    "@nuxtjs/eslint-config-typescript": "12.1.0",
-    "eslint": "8.49.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-compat": "4.2.0",
     "eslint-plugin-nuxt": "4.0.0",
     "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-yml": "1.9.0",
+    "eslint": "8.49.0",
+    "is-https": "4.0.0",
+    "jiti": "1.20.0",
+    "jose": "4.14.6",
     "lint-staged": "14.0.1",
+    "lodash-es": "4.17.21",
     "nuxt": "3.7.2",
-    "prettier": "3.0.3",
+    "pinia": "2.1.6",
     "prettier-plugin-tailwindcss": "0.5.4",
-    "stylelint": "15.10.3",
+    "prettier": "3.0.3",
+    "serve": "14.2.1",
     "stylelint-config-recommended-vue": "1.5.0",
     "stylelint-config-standard": "34.0.0",
     "stylelint-no-unsupported-browser-features": "7.0.0",
+    "stylelint": "15.10.3",
+    "sweetalert2": "11.7.27",
     "tailwindcss": "3.3.3",
+    "vue-gtag": "2.0.1",
+    "vue-tsc": "1.8.11",
     "vue": "3.3.4"
   },
   "peerDependencies": {
