--- a/src/package.json
+++ b/src/package.json
@@ -77,7 +77,7 @@
     "@nuxtjs/tailwindcss": "6.8.0",
     "@nuxtseo/module": "2.0.0-beta.29",
     "@pinia/nuxt": "0.4.11",
-    "@playwright/test": "1.37.1",
+    "@playwright/test": "1.38.0",
     "@tailwindcss/forms": "0.5.6",
     "@tailwindcss/typography": "0.5.10",
     "@types/cookie": "0.5.2",
@@ -92,31 +92,31 @@
     "cookie": "0.5.0",
     "cross-env": "7.0.3",
     "dayjs": "2.0.0-alpha.4",
+    "eslint": "8.49.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-compat": "4.2.0",
     "eslint-plugin-nuxt": "4.0.0",
     "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-yml": "1.9.0",
-    "eslint": "8.49.0",
     "is-https": "4.0.0",
     "jiti": "1.20.0",
     "jose": "4.14.6",
     "lint-staged": "14.0.1",
     "lodash-es": "4.17.21",
-    "nuxt": "3.7.2",
+    "nuxt": "3.7.3",
     "pinia": "2.1.6",
-    "prettier-plugin-tailwindcss": "0.5.4",
     "prettier": "3.0.3",
+    "prettier-plugin-tailwindcss": "0.5.4",
     "serve": "14.2.1",
+    "stylelint": "15.10.3",
     "stylelint-config-recommended-vue": "1.5.0",
     "stylelint-config-standard": "34.0.0",
     "stylelint-no-unsupported-browser-features": "7.0.0",
-    "stylelint": "15.10.3",
     "sweetalert2": "11.7.27",
     "tailwindcss": "3.3.3",
+    "vue": "3.3.4",
     "vue-gtag": "2.0.1",
-    "vue-tsc": "1.8.11",
-    "vue": "3.3.4"
+    "vue-tsc": "1.8.11"
   },
   "peerDependencies": {
     "playwright-core": "1.37.1"
