--- a/src/package.json
+++ b/src/package.json
@@ -105,6 +105,7 @@
     "lint-staged": "14.0.1",
     "lodash-es": "4.17.21",
     "nuxt": "3.7.3",
+    "nuxt-security": "0.14.4",
     "pinia": "2.1.6",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.4",
