--- a/src/package.json
+++ b/src/package.json
@@ -81,7 +81,6 @@
     "@playwright/test": "1.38.0",
     "@tailwindcss/forms": "0.5.6",
     "@tailwindcss/typography": "0.5.10",
-    "@types/cookie": "0.5.2",
     "@types/lodash-es": "4.17.9",
     "@urql/core": "4.1.2",
     "@urql/devtools": "2.0.3",
@@ -90,7 +89,7 @@
     "@vuelidate/core": "2.0.3",
     "@vuelidate/validators": "2.0.4",
     "clipboard": "2.0.11",
-    "cookie": "0.5.0",
+    "cookie-es": "1.0.0",
     "cross-env": "7.0.3",
     "dayjs": "2.0.0-alpha.4",
     "eslint": "8.49.0",
