--- a/src/package.json
+++ b/src/package.json
@@ -66,7 +66,7 @@
   },
   "dependencies": {
     "@axe-core/playwright": "4.7.3",
-    "@dargmuesli/nuxt-cookie-control": "6.4.3",
+    "@dargmuesli/nuxt-cookie-control": "7.0.0-beta.1",
     "@heroicons/vue": "2.0.18",
     "@http-util/status-i18n": "0.8.1",
     "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.3",
