chore(deps): pin nuxt-site-config

--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
   },
   "scripts": {
     "prepare": "husky install"
+  },
+  "pnpm": {
+    "overrides": {
+      "nuxt-site-config": "1.2.2"
+    }
   }
 }
