--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   prepare_jobs:
-    name: 'Prepare: job optimization'
+    name: "Prepare: job optimization"
     runs-on: ubuntu-latest
     outputs:
       pr_found: ${{ steps.pr.outputs.pr_found }}
@@ -25,7 +25,7 @@ jobs:
   release_semantic_dry:
     needs: prepare_jobs
     name: Release (semantic, dry)
-    uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@1.0.0-beta.8
+    uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@1.1.0
     if: contains(fromJSON('["beta", "alpha"]'), github.ref_name) || needs.prepare_jobs.outputs.pr_found == 'false' || github.event_name == 'pull_request'
     permissions:
       contents: write
@@ -36,7 +36,7 @@ jobs:
       DRY_RUN: true
   build:
     name: Build
-    uses: dargmuesli/github-actions/.github/workflows/docker.yml@1.0.0-beta.8
+    uses: dargmuesli/github-actions/.github/workflows/docker.yml@1.1.0
     needs: release_semantic_dry
     permissions:
       packages: write
@@ -46,7 +46,7 @@ jobs:
   release_semantic:
     needs: build
     name: Release (semantic)
-    uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@1.0.0-beta.8
+    uses: dargmuesli/github-actions/.github/workflows/release-semantic.yml@1.1.0
     permissions:
       contents: write
     secrets:
