--- a/src/package.json
+++ b/src/package.json
@@ -68,7 +68,7 @@
   },
   "dependencies": {
     "@axe-core/playwright": "4.8.1",
-    "@dargmuesli/nuxt-cookie-control": "7.0.0-beta.2",
+    "@dargmuesli/nuxt-cookie-control": "7.0.1",
     "@heroicons/vue": "2.0.18",
     "@http-util/status-i18n": "0.8.1",
     "@intlify/eslint-plugin-vue-i18n": "3.0.0-next.4",
@@ -77,7 +77,7 @@
     "@nuxtjs/color-mode": "3.3.0",
     "@nuxtjs/eslint-config-typescript": "12.1.0",
     "@nuxtjs/html-validator": "1.5.2",
-    "@nuxtjs/i18n": "8.0.0-rc.5",
+    "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge@8.0.0-rc.5-28296269.d5d5540",
     "@nuxtjs/tailwindcss": "6.8.0",
     "@nuxtseo/module": "2.0.0-beta.39",
     "@pinia/nuxt": "0.5.1",
@@ -85,6 +85,7 @@
     "@tailwindcss/forms": "0.5.6",
     "@tailwindcss/typography": "0.5.10",
     "@types/lodash-es": "4.17.10",
+    "@unhead/vue": "1.7.4",
     "@urql/core": "4.1.4",
     "@urql/devtools": "2.0.3",
     "@urql/exchange-graphcache": "6.3.3",
@@ -92,15 +93,18 @@
     "@vuelidate/core": "2.0.3",
     "@vuelidate/validators": "2.0.4",
     "clipboard": "2.0.11",
+    "consola": "3.2.3",
     "cookie-es": "1.0.0",
     "cross-env": "7.0.3",
     "dayjs": "2.0.0-alpha.4",
+    "defu": "6.1.2",
     "eslint": "8.52.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-compat": "4.2.0",
     "eslint-plugin-nuxt": "4.0.0",
     "eslint-plugin-prettier": "5.0.1",
     "eslint-plugin-yml": "1.10.0",
+    "h3": "1.8.2",
     "is-https": "4.0.0",
     "jiti": "1.20.0",
     "jose": "4.15.4",
@@ -108,6 +112,7 @@
     "lodash-es": "4.17.21",
     "nuxt": "3.8.0",
     "nuxt-security": "1.0.0-rc.2",
+    "ofetch": "1.3.3",
     "pinia": "2.1.7",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.6",
@@ -120,6 +125,7 @@
     "tailwindcss": "3.3.3",
     "vue": "3.3.6",
     "vue-gtag": "2.0.1",
+    "vue-router": "4.2.5",
     "vue-tsc": "1.8.19"
   },
   "peerDependencies": {
