--- a/src/package.json
+++ b/src/package.json
@@ -123,6 +123,7 @@
     "stylelint-no-unsupported-browser-features": "7.0.0",
     "sweetalert2": "11.7.32",
     "tailwindcss": "3.3.3",
+    "unhead": "1.7.4",
     "vue": "3.3.6",
     "vue-gtag": "2.0.1",
     "vue-router": "4.2.5",
