--- a/src/package.json
+++ b/src/package.json
@@ -66,7 +66,7 @@
     "test:e2e:server:static": "cross-env NODE_ENV=production PORT=3002 SITE_URL=http://localhost:3002 VIO_SERVER=static pnpm run test:e2e",
     "test:e2e": "playwright test"
   },
-  "dependencies": {
+  "devDependencies": {
     "@axe-core/playwright": "4.8.1",
     "@dargmuesli/nuxt-cookie-control": "7.0.1",
     "@heroicons/vue": "2.0.18",
