--- a/src/package.json
+++ b/src/package.json
@@ -109,7 +109,6 @@
     "jose": "5.1.0",
     "lint-staged": "15.0.2",
     "lodash-es": "4.17.21",
-    "nuxt": "3.8.0",
     "nuxt-security": "1.0.0-rc.2",
     "ofetch": "1.3.3",
     "pinia": "2.1.7",
@@ -129,7 +128,11 @@
     "vue-router": "4.2.5",
     "vue-tsc": "1.8.22"
   },
+  "devDependencies": {
+    "nuxt": "3.8.0"
+  },
   "peerDependencies": {
-    "playwright-core": "1.39.0"
+    "playwright-core": "1.39.0",
+    "nuxt": "3.8.0"
   }
 }
