--- a/src/package.json
+++ b/src/package.json
@@ -84,6 +84,7 @@
     "@playwright/test": "1.39.0",
     "@tailwindcss/forms": "0.5.6",
     "@tailwindcss/typography": "0.5.10",
+    "clipboardy": "4.0.0",
     "@types/lodash-es": "4.17.10",
     "@unhead/vue": "1.8.3",
     "@urql/core": "4.1.4",
@@ -92,7 +93,6 @@
     "@urql/vue": "1.1.2",
     "@vuelidate/core": "2.0.3",
     "@vuelidate/validators": "2.0.4",
-    "clipboard": "2.0.11",
     "consola": "3.2.3",
     "cookie-es": "1.0.0",
     "cross-env": "7.0.3",
