--- a/src/package.json
+++ b/src/package.json
@@ -93,7 +93,7 @@
     "stylelint-no-unsupported-browser-features": "7.0.0",
     "tailwindcss": "3.3.5",
     "ufo": "1.3.1",
-    "unhead": "1.8.3",
+    "unhead": "1.8.0-beta.2",
     "vue": "3.3.8",
     "vue-router": "4.2.5",
     "vue-tsc": "1.8.22"
