--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
       "@unhead/shared": "1.8.0-beta.2",
       "@unhead/ssr": "1.8.0-beta.2",
       "@unhead/vue": "1.8.0-beta.2",
+      "nuxt-schema-org": "3.0.1",
       "nuxt-site-config": "1.2.2",
       "unhead": "1.8.0-beta.2"
     }
