chore(deps): pin nuxt-simple-sitemap to 4.1.12

--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
   },
   "scripts": {
     "prepare": "husky install"
+  },
+  "pnpm": {
+    "overrides": {
+      "nuxt-simple-sitemap": "4.1.12"
+    }
   }
 }
