refactor(commitlint): migrate to v19

--- a/package.json
+++ b/package.json
@@ -33,5 +33,6 @@
     "test:e2e:server:node": "pnpm --dir src run test:e2e:server:node",
     "test:e2e:server:static": "pnpm --dir src run test:e2e:server:static",
     "test:e2e": "pnpm --dir src run test:e2e"
-  }
+  },
+  "type": "module"
 }
