fix(package): correct linting configuration export

--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
   },
   "packageManager": "pnpm@8.15.7",
   "files": [
+    ".config",
     "assets",
     "components",
     "composables",
@@ -27,7 +28,6 @@
     "utils",
     "app.config.ts",
     "error.vue",
-    "eslint.config.js",
     "i18n.config.ts",
     "nuxt.config.ts",
     "playwright.config.ts",
