--- a/.releaserc
+++ b/.releaserc
@@ -21,13 +21,20 @@
         "pkgRoot": "./src"
       }
     ],
+    [
+      "@semantic-release/npm",
+      {
+        "pkgRoot": "./tests"
+      }
+    ],
     "@semantic-release/github",
     [
       "@semantic-release/git",
       {
         "assets": [
           "CHANGELOG.md",
-          "./src/package.json"
+          "./src/package.json",
+          "./tests/package.json"
         ]
       }
     ]
