--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
     "@dargmuesli/nuxt-vio": "link:src",
-    "husky": "9.0.11"
-  },
-  "engines": {
-    "node": "20"
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/commit-analyzer": "13.0.0",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/github": "10.0.6",
+    "@semantic-release/npm": "12.0.1",
+    "@semantic-release/release-notes-generator": "14.0.0",
+    "husky": "9.0.11",
+    "semantic-release": "24.0.0"
   },
   "packageManager": "pnpm@9.3.0",
   "private": true,
@@ -20,12 +24,12 @@
     "start:dev": "pnpm --dir src run start:dev",
     "start:node": "pnpm --dir src run start:node",
     "start:static": "pnpm --dir src run start:static",
-    "test:e2e:docker:server:dev:update": "pnpm --dir tests run test:e2e:docker:server:dev:update",
     "test:e2e:docker:server:dev": "pnpm --dir tests run test:e2e:docker:server:dev",
-    "test:e2e:docker:server:node:update": "pnpm --dir tests run test:e2e:docker:server:node:update",
+    "test:e2e:docker:server:dev:update": "pnpm --dir tests run test:e2e:docker:server:dev:update",
     "test:e2e:docker:server:node": "pnpm --dir tests run test:e2e:docker:server:node",
-    "test:e2e:docker:server:static:update": "pnpm --dir tests run test:e2e:docker:server:static:update",
-    "test:e2e:docker:server:static": "pnpm --dir tests run test:e2e:docker:server:static"
+    "test:e2e:docker:server:node:update": "pnpm --dir tests run test:e2e:docker:server:node:update",
+    "test:e2e:docker:server:static": "pnpm --dir tests run test:e2e:docker:server:static",
+    "test:e2e:docker:server:static:update": "pnpm --dir tests run test:e2e:docker:server:static:update"
   },
   "type": "module"
 }
