chore(deps): pin nuxt and typescript versions

--- a/.renovaterc
+++ b/.renovaterc
@@ -7,6 +7,14 @@
     {
       "matchPackageNames": ["@nuxtjs/i18n"],
       "allowedVersions": "8.3.0"
+    },
+    {
+      "matchPackageNames": ["nuxt"],
+      "allowedVersions": "3.12.2"
+    },
+    {
+      "matchPackageNames": ["typescript"],
+      "allowedVersions": "5.4.5"
     }
   ]
 }
