--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "pnpm": {
     "overrides": {
       "@nuxtjs/i18n": "8.3.0",
+      "@nuxtjs/sitemap": "5.3.5",
       "typescript": "5.4.5"
     }
   }
