chore(deps): pin `doiuse` to v6.0.2

--- a/.renovaterc
+++ b/.renovaterc
@@ -7,6 +7,10 @@
     {
       "matchPackageNames": ["caniuse-lite"],
       "allowedVersions": "1.0.30001653"
+    },
+    {
+      "matchPackageNames": ["doiuse"],
+      "allowedVersions": "6.0.2"
     }
   ]
 }
