--- a/package.json
+++ b/package.json
@@ -34,5 +34,11 @@
     "test:e2e:docker:server:static": "pnpm --dir tests run test:e2e:docker:server:static",
     "test:e2e:docker:server:static:update": "pnpm --dir tests run test:e2e:docker:server:static:update"
   },
+  "pnpm": {
+    "overrides": {
+      "eslint": "9.14.0",
+      "@eslint/js": "9.14.0"
+    }
+  },
   "type": "module"
 }
