--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
   },
   "pnpm": {
     "overrides": {
-      "eslint": "9.14.0",
-      "@eslint/js": "9.14.0"
+      "@eslint/js": "9.14.0",
+      "@pinia/nuxt": "0.5.5",
+      "eslint": "9.14.0"
     }
   },
   "type": "module"
