fix(deps): pin @nuxtjs/tailwindcss to v6.12.2 (#266)
* fix(deps): pin @nuxtjs/tailwindcss to v6.12.2

* ci: use port 3000 for node build

* chore(test): update snapshots

* refactor(test): rename constant

* fix: revert "ci: always use port 3000 (#261)"

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build": "pnpm --dir src run build",
     "build:node": "pnpm --dir src run build:node",
     "build:static": "pnpm --dir src run build:static",
+    "build:static:test": "pnpm --dir src run build:static:test",
     "dev": "pnpm --dir src run dev",
     "generate": "pnpm --dir src run generate",
     "lint": "pnpm -r run lint",
@@ -35,6 +36,7 @@
   },
   "pnpm": {
     "overrides": {
+      "@nuxtjs/tailwindcss": "6.12.2",
       "nuxt-og-image": "4.0.1"
     }
   },
