--- a/src/package.json
+++ b/src/package.json
@@ -12,7 +12,7 @@
     "@nuxtjs/html-validator": "1.8.2",
     "@nuxtjs/i18n": "9.1.1",
     "@nuxtjs/seo": "2.0.2",
-    "@nuxtjs/tailwindcss": "6.13.0",
+    "@nuxtjs/tailwindcss": "6.12.2",
     "@pinia/nuxt": "0.9.0",
     "@tailwindcss/forms": "0.5.10",
     "@tailwindcss/typography": "0.5.16",
@@ -101,6 +101,7 @@
     "build": "pnpm run build:node",
     "build:node": "nuxt build .playground",
     "build:static": "nuxt generate .playground",
+    "build:static:test": "SITE_URL=https://localhost:3002 pnpm run build:static",
     "dev": "pnpm run start:dev",
     "generate": "pnpm run build:static",
     "lint:fix": "pnpm run lint:js --fix && pnpm run lint:ts --fix && pnpm run lint:style --fix",
