chore(deps): unpin nuxt-og-image

--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
   },
   "pnpm": {
     "overrides": {
-      "@nuxtjs/tailwindcss": "6.12.2",
-      "nuxt-og-image": "4.0.1"
+      "@nuxtjs/tailwindcss": "6.12.2"
     }
   },
   "type": "module"
