feat(test): add start script with port

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@semantic-release/github": "11.0.1",
     "@semantic-release/npm": "12.0.1",
     "@semantic-release/release-notes-generator": "14.0.3",
+    "cross-env": "7.0.3",
     "husky": "9.1.7",
     "lint-staged": "15.3.0",
     "semantic-release": "24.2.1"
@@ -26,7 +27,10 @@
     "prepare": "husky",
     "start:dev": "pnpm --dir src run start:dev",
     "start:node": "pnpm --dir src run start:node",
+    "start:node:test": "pnpm --dir src run start:node:test",
     "start:static": "pnpm --dir src run start:static",
+    "start:static:test": "pnpm --dir src run start:static:test",
+    "start:test": "pnpm --dir src run start:test",
     "test:e2e:docker:server:dev": "pnpm --dir tests run test:e2e:docker:server:dev",
     "test:e2e:docker:server:dev:update": "pnpm --dir tests run test:e2e:docker:server:dev:update",
     "test:e2e:docker:server:node": "pnpm --dir tests run test:e2e:docker:server:node",
