--- a/src/package.json
+++ b/src/package.json
@@ -101,7 +101,8 @@
     "build": "pnpm run build:node",
     "build:node": "nuxt build .playground",
     "build:static": "nuxt generate .playground",
-    "build:static:test": "SITE_URL=https://localhost:3002 pnpm run build:static",
+    "build:static:test": "cross-env NUXT_PUBLIC_VIO_IS_TESTING=true SITE_URL=https://localhost:3002 pnpm run build:static",
+    "build:test": "pnpm run build:static:test",
     "dev": "pnpm run start:dev",
     "generate": "pnpm run build:static",
     "lint:fix": "pnpm run lint:js --fix && pnpm run lint:ts --fix && pnpm run lint:style --fix",
@@ -114,7 +115,10 @@
     "preview": "nuxt preview .playground",
     "start:dev": "nuxt dev .playground",
     "start:node": "node .playground/.output/server/index.mjs",
-    "start:static": "serve .playground/.output/public --ssl-cert ./.config/certificates/ssl.crt --ssl-key ./.config/certificates/ssl.key"
+    "start:node:test": "PORT=3001 pnpm run start:node",
+    "start:static": "serve .playground/.output/public --ssl-cert ./.config/certificates/ssl.crt --ssl-key ./.config/certificates/ssl.key",
+    "start:static:test": "PORT=3002 pnpm run start:static",
+    "start:test": "pnpm run start:static:test"
   },
   "type": "module",
   "version": "16.0.2"
