chore(package): add start script

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "generate": "pnpm --dir src run generate",
     "lint": "pnpm -r run lint",
     "prepare": "husky",
+    "start": "pnpm --dir src run start",
     "start:dev": "pnpm --dir src run start:dev",
     "start:node": "pnpm --dir src run start:node",
     "start:static": "pnpm --dir src run start:static",
