--- a/src/package.json
+++ b/src/package.json
@@ -87,8 +87,8 @@
   },
   "scripts": {
     "build": "pnpm run build:node",
-    "build:node": "nuxt build .playground",
-    "build:static": "nuxt generate .playground",
+    "build:node": "nuxt build playground",
+    "build:static": "nuxt generate playground",
     "build:static:test": "SITE_URL=https://localhost:3002 pnpm run build:static",
     "dev": "pnpm run start:dev",
     "generate": "pnpm run build:static",
@@ -98,12 +98,12 @@
     "lint:staged": "lint-staged",
     "lint:style": "stylelint --cache \"**/*.{vue,css}\" --ignore-path .gitignore",
     "lint:ts": "nuxt typecheck",
-    "prepare": "nuxt prepare && nuxt prepare .playground && ./.config/certificates/mkcert.sh",
-    "preview": "nuxt preview .playground",
+    "prepare": "nuxt prepare && nuxt prepare playground && ./.config/certificates/mkcert.sh",
+    "preview": "nuxt preview playground",
     "start": "pnpm run start:node",
-    "start:dev": "nuxt dev .playground",
-    "start:node": "node .playground/.output/server/index.mjs",
-    "start:static": "serve .playground/.output/public --ssl-cert ./.config/certificates/ssl.crt --ssl-key ./.config/certificates/ssl.key"
+    "start:dev": "nuxt dev playground",
+    "start:node": "node playground/.output/server/index.mjs",
+    "start:static": "serve playground/.output/public --ssl-cert ./.config/certificates/ssl.crt --ssl-key ./.config/certificates/ssl.key"
   },
   "type": "module",
   "version": "18.3.6"
