fix(deps): pin nuxt-og-image to v5.1.12

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -5,6 +5,10 @@
     {
       "allowedVersions": "7.4.7",
       "matchPackageNames": ["@nuxtjs/sitemap"]
+    },
+    {
+      "allowedVersions": "5.1.12",
+      "matchPackageNames": ["nuxt-og-image"]
     }
   ]
 }
