chore: revert "fix(deps): pin nuxt-og-image to v5.1.12"
This reverts commit cb34c21ad6edf78120bd65259c71557bb0479343.

--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
       "vue-demi"
     ],
     "overrides": {
-      "@nuxtjs/sitemap": "7.4.7",
-      "nuxt-og-image": "5.1.12"
+      "@nuxtjs/sitemap": "7.4.7"
     }
   },
   "private": true,
