fix(package): release scripts

--- a/src/package.json
+++ b/src/package.json
@@ -76,9 +76,10 @@
     ".config",
     "app",
     "i18n",
+    "node",
+    "scripts",
     "server",
     "shared",
-    "node",
     "nuxt.config.ts",
     "package.json"
   ],
