ci: build static test

--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,6 @@
     "@dargmuesli/nuxt-cookie-control": "9.1.15",
     "@eslint/compat": "2.0.2",
     "@heroicons/vue": "2.2.0",
-    "@nuxtjs/turnstile": "1.1.1",
     "@http-util/status-i18n": "0.9.0",
     "@intlify/eslint-plugin-vue-i18n": "4.1.1",
     "@nuxt/devtools": "3.1.1",
@@ -13,6 +12,7 @@
     "@nuxtjs/html-validator": "2.1.0",
     "@nuxtjs/i18n": "10.2.3",
     "@nuxtjs/seo": "3.4.0",
+    "@nuxtjs/turnstile": "1.1.1",
     "@pinia/nuxt": "0.11.3",
     "@tailwindcss/forms": "0.5.11",
     "@tailwindcss/typography": "0.5.19",
@@ -100,6 +100,7 @@
     "build": "pnpm run build:node",
     "build:node": "NUXT_PUBLIC_SITE_URL=https://localhost:3001 nuxt build playground",
     "build:static": "NUXT_PUBLIC_SITE_URL=https://localhost:3002 nuxt generate playground",
+    "build:static:test": "NUXT_PUBLIC_VIO_IS_TESTING=true nuxt generate playground",
     "certificates": ".config/certificates/mkcert.sh",
     "dev": "pnpm run start:dev",
     "generate": "pnpm run build:static",
